# tech-service

./: .env  default.conf  docker-compose.yaml
server/: .gitignore  Dockerfile  index.html  pyproject.toml  requirements.txt
server/app/: main.py
server/app/controllers/: auth.py  component.py  notification.py  repair_request.py  user.py
server/app/core/: config.py  enums.py  exceptions.py  logging.py  permission.py  postmark.py
server/app/database/: base.py  session.py
server/app/repositories/: auth.py  component.py  notification.py  repair_request.py  user.py
server/app/routers/: auth.py  component.py  notification.py  repair_request.py  user.py
server/app/schemas/: auth.py  component.py  notification.py  repair_request.py  user.py
server/app/template/: auth_link.html  notification.html
server/app/utils/: auth.py  email.py  hash.py  jwt.py  response.py
server/migrations/: env.py
server/migrations/versions/: 05b995b97716_blacklist_model.py  23397eaf4314_component_model.py  238f779226bc_squashed_migration.py  2e1d2b181311_squashed_migration.py  2f84d7ebd2f4_squashed_migration.py  4e3e5227847e_add_repair_request_components.py  52c5e6fdbbe4_repair_request_model.py  55424a8ec4a1_component_model.py  69b4e68f7d65_add_repair_request_components.py  71c17d12219c_delete_start_time_col.py  833c5d84f92d_fixed_user_repair_request.py  928ddd18b4a1_qwerty.py  939c613b8531_user_model.py  a19c67fd18e1_squashed_migration.py  ae2761fe91cb_squashed_migration.py  b6b6472fbfd8_fixed_timezone.py  bfd1a7b814f0_fix.py  d688bf591bbb_new_model_notification.py  (+2 more)
(+82 files in other folders)
